# OpenGL

01_SDL_OpenGL_Setup/: main.cpp
01_SDL_Setup/: main.cpp
02_CMake_Tutorial/Step1/: CMakeLists.txt
03_OpenGl_Starter/: CMakeLists.txt  README.md  cmake_guide.md  glad.c  main.cpp  notes.md
04_Shaders/: CMakeLists.txt  cmake_guide.md  graphics_app.cpp  memory_mgmt.md  shader.frag  shader.vert
04_Shaders/include/glad/: glad.h
